Minor upate in students testimonils commit

--- a/index.html
+++ b/index.html
@@ -302,6 +302,29 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="testimonials">
+            <figure class="testimonials__shape">
+              <img
+                src="/images/s2.jpg"
+                alt="student photo"
+                class="testimonials__img"
+              />
+              <figcaption class="testimonials__name">Aalia Dar</figcaption>
+            </figure>
+            <div class="testimonials__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                B.Sc Computer Science
+              </h3>
+              <p>
+                b Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+                sapiente sunt a esse quidem maxime, debitis ab quibusdam
+                corporis nam? Dolorem hic et excepturi animi perferendis dolores
+                veritatis earum? Aspernatur.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
